# contentforge

./: CHANGELOG.md  Cargo.toml  README.md  install.sh  mcp-manifest.json  release-please-config.json
.github/workflows/: ci.yml  docs.yml  release.yml
book/: book.toml
book/src/: SUMMARY.md  index.md
book/src/architecture/: crate-map.md  overview.md
book/src/getting-started/: configuration.md  installation.md  quickstart.md
book/src/guide/: ai-agents.md  content-workflow.md  mcp-integration.md  platforms.md
book/src/reference/: api.md  cli.md  mcp.md
content-system/: CONTENT_SYSTEM.md  calendar.md
content-system/brand/: bio.md  links.md
content-system/content/: WINDMILL-INTEGRATION-V2.md  WINDMILL-INTEGRATION.md
content-system/projects/claude-forge/: STATUS.md
content-system/projects/codeilus/: STATUS.md
content-system/projects/contentforge/: STATUS.md
content-system/projects/free-storage/: STATUS.md
content-system/projects/free-storage-app/: STATUS.md
content-system/projects/glass-ios-apple/: STATUS.md
content-system/projects/glassforge/: STATUS.md
content-system/projects/ton-ai-toolkit/: STATUS.md
content-system/templates/: build-story.md  launch-post.md  results-post.md  weekly-ship.md
crates/contentforge-agent/src/: lib.rs
crates/contentforge-api/src/: lib.rs
crates/contentforge-app/src/: main.rs
crates/contentforge-cli/src/: lib.rs
crates/contentforge-core/: Cargo.toml
crates/contentforge-core/src/: content.rs  error.rs  lib.rs  license.rs  platform.rs
crates/contentforge-db/src/: migrations.rs  repo.rs
crates/contentforge-db/src/migrations/: 002_pipeline.sql
crates/contentforge-mcp/: Cargo.toml
crates/contentforge-mcp/src/: lib.rs
crates/contentforge-pipeline/: Cargo.toml
crates/contentforge-pipeline/src/: definition.rs  lib.rs  queue.rs  worker.rs
crates/contentforge-publish/src/adapters/: bluesky.rs  devto.rs  linkedin.rs  mastodon.rs  medium.rs  mod.rs  twitter.rs
crates/contentforge-schedule/src/: lib.rs
crates/contentforge-tui/: Cargo.toml
crates/contentforge-tui/src/: lib.rs
docs/: BUILD_PLAN.md  LAUNCH_MANUAL.md  LAUNCH_PLAN.md  PERPLEXITY_RESEARCH.md  PRODUCT_STRATEGY.md  SESSION_REPORT.md
frontend/: package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: ContentCard.svelte  MarkdownPreview.svelte  Nav.svelte  PlatformIcon.svelte  StatusBadge.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/analytics/: +page.svelte
frontend/src/routes/draft/: +page.svelte
frontend/src/routes/draft/[id]/: +page.svelte
frontend/src/routes/draft/new/: +page.svelte
frontend/src/routes/publish/: +page.svelte
frontend/src/routes/schedule/: +page.svelte
frontend/src/routes/settings/: +page.svelte
infra/license-worker/: README.md  wrangler.toml
infra/license-worker/src/: worker.js
landing/: index.html
scripts/: submit-mcp-registries.md  test-real-apis.sh
