[workspace]
resolver = "2"
members = [
    "crates/contentforge-core",
    "crates/contentforge-db",
    "crates/contentforge-api",
    "crates/contentforge-tui",
    "crates/contentforge-cli",
    "crates/contentforge-publish",
    "crates/contentforge-agent",
    "crates/contentforge-schedule",
    "crates/contentforge-analytics",
    "crates/contentforge-mcp",
    "crates/contentforge-pipeline",
    "crates/contentforge-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mehdi Baneshi <baneshi@gmail.com>"]
license = "MIT"
repository = "https://github.com/mbaneshi/contentforge"
homepage = "https://github.com/mbaneshi/contentforge"
rust-version = "1.80"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP client (for platform adapters)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# OAuth
oauth2 = "5"

# TUI
ratatui = "0.30"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }

# MCP
rmcp = { version = "0.16", features = ["server", "transport-io"] }

# AI / LLM
rig-core = "0.9"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Cron scheduling
cron = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Crypto (credential encryption + license validation)
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# TOML parsing
toml = "0.8"

# Markdown
pulldown-cmark = "0.12"

# Embedded frontend
rust-embed = { version = "8", features = ["mime-guess"] }

# Testing
tokio-test = "0.4"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
