[package]
name = "contentforge-pipeline"
description = "Pipeline engine for ContentForge — job queue, worker, state machine, retry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
contentforge-core = { path = "../contentforge-core" }
contentforge-db = { path = "../contentforge-db" }
contentforge-publish = { path = "../contentforge-publish" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
toml = "0.8"
