[package]
name = "contentforge-tui"
description = "Ratatui terminal UI for ContentForge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
contentforge-core = { path = "../contentforge-core" }
contentforge-db = { path = "../contentforge-db" }

ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
unicode-width = "0.2"
